2006-03-27  Nick Roberts  <nickrob@snap.net.nz>

	* comint.el (comint-dynamic-list-completions): Allow user to
	select *Completions* buffer.

2006-03-27  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-get-level-face): Fix bug with level
	counting.

2006-03-26  Andreas Schwab  <schwab@suse.de>

	* progmodes/gud.el (gdb): Only complain about multiple debugging
	when the gdb process is still running.

2006-03-25  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (tool-bar-map): Defvar it.
	(rmail-tool-bar-map): Tool-bar buttons for Rmail.
	(rmail-perm-variables): Make rmail-tool-bar-map a local variable.

2006-03-25  Sven Joachim  <svenjoac@gmx.de>  (tiny change)

	* help.el (print-help-return-message): Suggest to use
	display-buffer instead of switch-to-buffer-other-window to restore
	the previous window without selecting it.

2006-03-25  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.el (select-frame-by-name): Call x-focus-frame also when
	window-system is mac.

	* term/mac-win.el: Adjust Courier font specifications in
	x-fixed-font-alist.
	(mac-select-convert-to-string): Use utf-16be-mac or utf-16le-mac
	when directly encoding to UTF-16 in native byte order, no BOM.

2006-03-25  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua-rectangle-mark-key): New defcustom.
	(cua--init-keymaps): Use it instead of fixed C-return.
	(cua-mode): Set after it.

	* emulation/cua-rect.el (cua--init-rectangles): Use
	cua-rectangle-mark-key instead of fixed C-return.

2006-03-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdba): Revert 2006-03-10 change for case of
	"run" in .gdbinit.
	(gdb-var-create-regexp): Remove "^done" prefix for gdb-mi.el.

2006-03-24  Romain Francoise  <romain@orebokech.com>

	* files.el (ctl-x-5-map): Really bind C-x 5 C-o to
	`display-buffer-other-frame'.

2006-03-24  Kim F. Storm  <storm@cua.dk>

	* apropos.el (apropos-synonyms): Add selection => region.
